--- a/backend/.gitignore
+++ b/backend/.gitignore
@@ -25,3 +25,10 @@ yarn-error.log*
 # OS generated files
 .DS_Store
 Thumbs.db
+
+# Temporary files
+tmp/
+temp/
+
+# Ignore .gitignore file itself
+.gitignore
